--- a/cupones/index.html
+++ b/cupones/index.html
@@ -7,5 +7,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
   </body>
 </html>
